version/0.3/_sources/api/ansys/heart/simulator/simulator/index.rst.txt





The ``simulator.py`` module
===========================

.. py:module:: ansys.heart.simulator.simulator


Summary
-------
















.. py:currentmodule:: simulator
.. tab-set::




    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:attr:`~BaseSimulator`
            - Base class for the simulator.


          * - :py:attr:`~EPSimulator`
            - EP Simulator.


          * - :py:attr:`~MechanicsSimulator`
            - Mechanics simulator with imposed active stress.


          * - :py:attr:`~EPMechanicsSimulator`
            - Coupled EP-mechanics simulator with computed Electrophysiology.





    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:attr:`~which`
            - Return path if program exists, else None.


          * - :py:attr:`~run_lsdyna`
            - Standalone function for running LS-DYNA.









.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    🝆 BaseSimulator<BaseSimulator>
    🝆 EPSimulator<EPSimulator>
    🝆 MechanicsSimulator<MechanicsSimulator>
    🝆 EPMechanicsSimulator<EPMechanicsSimulator>









Description
-----------

Simulator module.

Options for simulation:

- EP-only
    with/without fbers.
    with/without purkinje.
- Electro-mechanics
    simplified EP (imposed activation).
    coupled electro-mechanics.

..
    !! processed by numpydoc !!






Module detail
-------------

.. py:function:: which(program)

   
   Return path if program exists, else None.
















   ..
       !! processed by numpydoc !!

.. py:function:: run_lsdyna(path_to_input: pathlib, settings: ansys.heart.simulator.settings.settings.DynaSettings = None, simulation_directory: pathlib = None)

   
   Standalone function for running LS-DYNA.


   :Parameters:

       **path_to_input** : :obj:`Path`
           Input file for LS-DYNA.

       **settings** : :obj:`DynaSettings`, :obj:`optional`
           LS-DYNA settings, such as path to executable, executable type,
           platform, by default ``None``.

       **simulation_directory** : :obj:`Path`, :obj:`optional`
           Directory where to simulate, by default ``None``.














   ..
       !! processed by numpydoc !!



